--- a/my_lambdata/Pipfile
+++ b/my_lambdata/Pipfile
@@ -4,9 +4,10 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-twine = "*"
 
 [packages]
+pandas = "*"
+numpy = "*"
 
 [requires]
 python_version = "3.7"
